--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="col-12">
                             <div class="welcome-text text-right">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Virtual<br>AARAMBH</h2>
-                                <h6 data-animation="fadeInUp" data-delay="500ms">Powered by - MIIC & E-CELL</h6>
+                                <h6 data-animation="fadeInUp" data-delay="500ms">Presented by - MIIC & E-CELL</h6>
                                 <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                                     <a href="#about" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a>
                                 </div>
@@ -196,7 +196,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10AM - 10:15AM on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10AM - 10:15AM on September 19, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -209,7 +209,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM onSeptember 19, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -222,7 +222,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 1PM - 2PM on 19 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 1PM - 2PM on September 19, 2020</p>
                                             </div>
                                         </div>                                        
                                     </div>
@@ -246,7 +246,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on 20 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on September 20, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -260,7 +260,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 1PM - 1:30PM on 20 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 1PM - 1:30PM on September 20, 2020</p>
                                             </div>
                                         </div>
                                     </div>
@@ -283,7 +283,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 11AM - 12PM on 21 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 11AM - 12PM on September 21, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -297,7 +297,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on 21 Sept 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 12PM - 1PM on September 21, 2020</p>
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +328,7 @@
                 <!-- Single Ticket Pricing Table -->
                 <div class="col-12 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">HTML/CSS <br>Early Bird</h6>
+                        <h6 class="ticket-plan">CSS With PEN <br>Early Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p1.png" alt="">
@@ -341,7 +341,7 @@
                 </div>
                 <div class="col-12 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">HTML/CSS <br>Regular Bird</h6>
+                        <h6 class="ticket-plan">CSS With PEN <br>Regular Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p1.png" alt="">
@@ -353,7 +353,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">Hackathon <br>Early Bird</h6>
+                        <h6 class="ticket-plan">CODE Tussle <br>Early Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p3.png" alt="">
@@ -368,7 +368,7 @@
                 <!-- Single Ticket Pricing Table -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms">
-                        <h6 class="ticket-plan">Hackathon <br>Regular Bird</h6>
+                        <h6 class="ticket-plan">CODE Tussle <br>Regular Bird</h6>
                         <!-- Ticket Icon -->
                         <div class="ticket-icon">
                             <img src="img/core-img/p3.png" alt="">
