--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM onSeptember 19, 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM on September 19, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
