--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <!-- Event Meta -->
                                 <div class="event-meta" data-animation="fadeInUp" data-delay="500ms">
                                     <a class="event-date" href="#"><i class="zmdi zmdi-alarm-check"></i> September 19, 2020</a>
-                                    <a class="event-author" href="#"><i class="zmdi zmdi-account"></i>MIIC And E-CELL</a>
+                                    <a class="event-author" href="#"><i class="zmdi zmdi-account"></i>MIIC And e-Cell</a>
                                 </div>
                                 <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                                     <a href="#about" class="btn confer-btn m-2">View more <i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -82,7 +82,7 @@
                         <div class="col-12">
                             <div class="welcome-text text-right">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Virtual<br>AARAMBH</h2>
-                                <h6 data-animation="fadeInUp" data-delay="500ms">Presented by - MIIC & E-CELL</h6>
+                                <h6 data-animation="fadeInUp" data-delay="500ms">Presented by - MIIC & e-Cell</h6>
                                 <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
                                     <a href="#about" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a>
                                 </div>
@@ -108,7 +108,7 @@
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About AARAMBH</h6>
                         <h3 class="wow fadeInUp" data-wow-delay="300ms">Journey Towards Innovation</h3>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">MIIC & E-CELL is organizing AARAMBH 2020, a three-day fest. provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. #AARAMBH2020 attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36 hrs Hackathon.
+                        <p class="wow fadeInUp" data-wow-delay="300ms">MIIC & e-Cell is organizing AARAMBH 2020, a three-day fest. provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. #AARAMBH2020 attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36 hrs Hackathon.
                             </p>
                         <a href="#ticket" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
@@ -165,15 +165,15 @@
                     <div class="schedule-tab">
                         <ul class="nav nav-tabs wow fadeInUp" data-wow-delay="300ms" id="conferScheduleTab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#step-one" role="tab" aria-controls="step-one" aria-expanded="true">Monday <br> <span>September 19, 2020</span></a>
+                                <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#step-one" role="tab" aria-controls="step-one" aria-expanded="true">Saturday <br> <span>September 19, 2020</span></a>
                             </li>
                             <!-- Nav Item -->
                             <li class="nav-item">
-                                <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#step-two" role="tab" aria-controls="step-two" aria-expanded="true">Tuesday <br> <span>September 20, 2020</span></a>
+                                <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#step-two" role="tab" aria-controls="step-two" aria-expanded="true">Sunday <br> <span>September 20, 2020</span></a>
                             </li>
                             <!-- Nav Item -->
                             <li class="nav-item">
-                                <a class="nav-link" id="wednesday-tab" data-toggle="tab" href="#step-three" role="tab" aria-controls="step-three" aria-expanded="true">Wednesday <br> <span>September 21, 2020</span></a>
+                                <a class="nav-link" id="wednesday-tab" data-toggle="tab" href="#step-three" role="tab" aria-controls="step-three" aria-expanded="true">Monday <br> <span>September 21, 2020</span></a>
                             </li>
                         </ul>
                     </div>
@@ -334,7 +334,7 @@
                             <img src="img/core-img/p1.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>59</h2>
-                        <p>Till 13th September</p>
+                        <p>Till September 13, 2020</p>
                         <a  target="_blank" href="http://bit.ly/aarambh20" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                     </div>
@@ -347,7 +347,7 @@
                             <img src="img/core-img/p1.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>79</h2>
-                        <p>13th September onwards</p>
+                        <p>September 13, 2020 onwards</p>
                         <!-- Ticket Pricing Table Details -->
                     </div>
                 </div>
@@ -359,7 +359,7 @@
                             <img src="img/core-img/p3.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>199</h2>
-                        <p>Till 13th September</p>
+                        <p>Till September 13, 2020</p>
                         <a target="_blank" href="https://bit.ly/aarambhhack" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
                         <!-- Ticket Pricing Table Details -->
                     </div>
@@ -374,7 +374,7 @@
                             <img src="img/core-img/p3.png" alt="">
                         </div>
                         <h2 class="ticket-price"><span>Rs</span>249</h2>
-                        <p>13th September onwards</p>
+                        <p>September 13, 2020 onwards</p>
                         <!-- Ticket Pricing Table Details -->
                     </div>
                 </div>
@@ -433,7 +433,7 @@
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
                                     <h2 style="color: white; text-align: center;">Know about e-Cell</h2>
-                                    <p class="text-justify">The E-Cell Medi-Caps University is a student body formed in 2016 with the motive to Ideate.Innovate.Initiate. A team of mentors and  E-cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
+                                    <p class="text-justify">The e-Cell Medi-Caps University is a student body formed in 2016 with the motive to Ideate.Innovate.Initiate. A team of mentors and  e-Cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
                                         At Medi-Caps University, while academic excellence is meant to be uncompromising, we believe that the significance of entrepreneurial skill is indelible to an integrated experience in our university. Aspiring to stride towards a holistic development.</p>
                                     <!-- Single client Thumb and info -->
                                 </div>
@@ -485,7 +485,7 @@
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is Code Tussle?</a>
                             <p>A. Code Tussle is a complete online Hackathon conducted by Medi-Caps Innovation and
-Incubation Center (MIIC) and Entrepreneurship Cell (E-Cell). It is one of the most important
+Incubation Center (MIIC) and Entrepreneurship Cell (e-Cell). It is one of the most important
 activities of AARAMBH-2020.
 </p>
                         </div>
