--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About AARAMBH</h6>
                         <h3 class="wow fadeInUp" data-wow-delay="300ms">Journey Towards Innovation</h3>
-                        <p class="wow fadeInUp" data-wow-delay="300ms">MIIC & e-Cell is organizing AARAMBH 2020, a three-day fest. provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. #AARAMBH2020 attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36 hrs Hackathon.
+                        <p class="wow fadeInUp" data-wow-delay="300ms" style="text-align: justify;">MIIC & e-Cell is organizing AARAMBH 2020, a three days fest. It provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. <b>#AARAMBH2020</b>  attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36hrs Hackathon.
                             </p>
                         <a href="#ticket" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
@@ -209,7 +209,7 @@
                                             </div>
                                             <!-- Single Schedule Info -->
                                             <div class="schedule-time-place">
-                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 11:30AM on September 19, 2020</p>
+                                                <p><i class="zmdi zmdi-time"></i> 10:15AM - 12PM on September 19, 2020</p>
                                             </div>
                                         </div>
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
@@ -397,8 +397,8 @@
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">KNOW ABOUT US</h2>
-                                    <p class="text-justify">Medicaps Innovation and Incubation Centre (MIIC) by Medicaps University is a platform for
+                                    <h2 style="color: white; text-align: center;">KNOW ABOUT MIIC</h2>
+                                    <p class="text-justify">Medi-Caps Innovation and Incubation Centre (MIIC) by Medi-Caps University is a platform for
                                         nurturing and overseeing innovation and entrepreneurship. We nurture and mentor aspiring
                                         entrepreneur and transform their innovative ideas into viable entrepreneurial initiatives through
                                         excellence and service. No idea is ever too small, and no problem is ever too big for us. MIIC
@@ -415,11 +415,11 @@
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">ABOUT OUR UNIVERSITY</h2>
-                                    <p class="text-justify">Medi-Caps University is one of the brand names in the arena of technical education and is contributing
+                                    <h2 style="color: white; text-align: center;">OUR UNIVERSITY</h2>
+                                    <p class="text-justify">Medi-Caps University is one of the brand names in the arena of education and is contributing
                                         in making Indore an educational hub. We have an optimal blend of academic brilliance and industry
                                         exposure, which is supplemented by highly specialized visiting faculty and industry experts, senior
-                                        professionals from various segments of different industry/ business houses. We produce conceptually
+                                        professionals from various segments of different industry business houses. We produce conceptually
                                         sound, practically oriented, value driven and well groomed technocrats and professionals. The
                                         highly motivated youngsters on the campus are a constant source of pride. </p>
                                     <!-- Single client Thumb and info -->
@@ -433,7 +433,7 @@
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
                                     <h2 style="color: white; text-align: center;">Know about e-Cell</h2>
-                                    <p class="text-justify">The e-Cell Medi-Caps University is a student body formed in 2016 with the motive to Ideate.Innovate.Initiate. A team of mentors and  e-Cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
+                                    <p class="text-justify">The e-Cell Medi-Caps University is a student body formed in 2016 with the motive to <span style="font-size: 20px;">Ideate.Innovate.Initiate.</span> A team of mentors and  e-Cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
                                         At Medi-Caps University, while academic excellence is meant to be uncompromising, we believe that the significance of entrepreneurial skill is indelible to an integrated experience in our university. Aspiring to stride towards a holistic development.</p>
                                     <!-- Single client Thumb and info -->
                                 </div>
@@ -450,7 +450,7 @@
                                 <div class="single-client-text;">
                                     <h2 style="color: white; text-align: center;">Why We Are Organising</h2>
                                     <p class="text-justify"  style="color: white;">Business incubators and accelerators nurture the talent and ventures that form the backbone of the
-                                        knowledge-driven economies of the 21st century. Based on this understanding, the MIIC 2020 provides
+                                        knowledge-driven economies of the 21<sup>st</sup> century. Based on this understanding, the MIIC 2020 provides
                                         incubator and accelerator managers, corporate innovation officers, and policymakers a platform to
                                         connect and learn about the best ways to nurture innovation in their respective ecosystems. It will
                                         provide corporate innovation managers to build network in the growing tech community and
@@ -484,7 +484,7 @@
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is Code Tussle?</a>
-                            <p>A. Code Tussle is a complete online Hackathon conducted by Medi-Caps Innovation and
+                            <p style="text-align: justify;"><b>Ans.</b> Code Tussle is a complete online Hackathon conducted by Medi-Caps Innovation and
 Incubation Center (MIIC) and Entrepreneurship Cell (e-Cell). It is one of the most important
 activities of AARAMBH-2020.
 </p>
@@ -495,12 +495,12 @@ activities of AARAMBH-2020.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the procedure of Code Tussle?</a>
-                            <p>A. Procedure for hackaton: <br>
+                            <p style="text-align: justify;"><b>Ans.</b> Procedure for hackaton: <br>
 1. Make a team according to the above-said team size and decide your leader.<br>
-2. Register yourself<br>
+2. Register yourself in Code Tussle.<br>
 3. Make your product (Android app, Website)<br>
 4. Submit it for evaluation on GitHub.<br>
-5. Results will be declared on the website</p>
+5. Results will be declared on the website.</p>
                         </div>
                     </div>
                 </div>
@@ -508,8 +508,8 @@ activities of AARAMBH-2020.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. When will Code Tussle start?</a>
-                            <p>A. On September 20th, at 12:00 noon, Code Tussle will commence on GitHub. It is a 36-hour
-hackathon and will complete at 11:00 PM on September 21st, 2020. After which judges and
+                            <p style="text-align: justify;"><b>Ans.</b> On September 20<sup>th</sup>, at 12:00 noon, Code Tussle will commence on GitHub. It is a 36hours
+hackathon and will complete at 11:00 PM on September 21<sup>st</sup>, 2020. After which judges and
 organizers will evaluate your submissions and declare results on the website after the
 conclusion of the event.</p>
                         </div>
@@ -520,17 +520,15 @@ conclusion of the event.</p>
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. How to make the submission on GitHub?</a>
-                            <p>A. Update your commits on GitHub from time to time and prepare a video presentation of your
-final product.</p>
+                            <p style="text-align: justify;"><b>Ans.</b> Update your commits on GitHub from time to time and prepare a video presentation of your final product.</p>
                         </div>
                     </div>
                 </div>
                  <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. When will the result be announced?</a>
-                            <p>A. Not later than a week after completion of Code Tussle.
-                                </p>
+                            <a class="blog-title" href="#">Q. When will be the result announce?</a>
+                            <p style="text-align: justify;"><b>Ans.</b> The result will be announced a week after completion of Code Tussle.</p>
                         </div>
                     </div>
                 </div>
@@ -538,8 +536,8 @@ final product.</p>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. How will you check for Plagiarism?</a>
-                            <p>A. We have experts for checking plagiarism and GitHub provides support in the same along with various tools.</p>
+                            <a class="blog-title" href="#">Q. How will we check for Plagiarism?</a>
+                            <p style="text-align: justify;"><b>Ans.</b> We have experts for checking plagiarism and GitHub provides support in the same along with various tools.</p>
                         </div>
                     </div>
                 </div>
@@ -558,11 +556,10 @@ final product.</p>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What is Start with CSS?
-
+                            <a class="blog-title" href="#">Q. When to Start with CSS?
                             </a>
-                            <p>A. On September 19th, 2020 at 1:00 PM, a 12-hour online competition (Start with CSS) based
-on the basics of CSS and HTML will commence on CodePen.io and Slack in which you can
+                            <p style="text-align: justify;"><b>Ans.</b> On September 19<sup>th</sup>, 2020 at 1:00 PM, a 12-hour online competition (Start with CSS) based
+on the basics of CSS and HTML will commence on Codepen.io and Slack in which you can
 participate individually. Winners will be awarded prizes and certificates.
 
                                 </p>
@@ -574,7 +571,7 @@ participate individually. Winners will be awarded prizes and certificates.
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the evaluation criterion for Start with CSS?
                             </a>
-                            <p>A. The evaluation will be based on:-<br>
+                            <p style="text-align: justify;"><b>Ans.</b> The evaluation will be based on:-<br>
 1. Theme Utilization<br>
 2. Technicality<br>
 3. Creativity<br>
@@ -589,7 +586,7 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What are the themes for Start with CSS?</a>
-                            <p>A. Themes for the CSS event:<br>
+                            <p style="text-align: justify;"><b>Ans.</b> Themes for the CSS event:<br>
 1. Ecosystem<br>
 2. Space<br>
 3. Cartoon Illustration<br>
@@ -604,15 +601,15 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What are the Pre-requisites?</a>
-                            <p>A. A stable internet connection and pre-registration and knowledge in frontend technologies like HTML, CSS, JavaScript</p>
+                            <p style="text-align: justify;"><b>Ans.</b> A stable internet connection and pre-registration and knowledge in frontend technologies like HTML, CSS, JavaScript, etc.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What is the criterion for participating in Start with CSS?</a>
-                            <p>A. CodePen.io and Slack and participants need to register beforehand.
+                            <a class="blog-title" href="#">Q. What is the evaluation criteria for participating in Start with CSS?</a>
+                            <p style="text-align: justify;"><b>Ans.</b> Registration is required to participate in the event.
                                 </p>
                         </div>
                     </div>
@@ -621,7 +618,7 @@ participate individually. Winners will be awarded prizes and certificates.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. On which platform will Start with CSS take place?</a>
-                            <p>A. CodePen.io and Slack and participants need to register beforehand.
+                            <p style="text-align: justify;"><b>Ans.</b> Codepen.io and Slack and participants need to register beforehand.
                                 </p>
                         </div>
                     </div>
@@ -644,7 +641,7 @@ participate individually. Winners will be awarded prizes and certificates.
                         <div class="single-footer-widget mb-60 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Footer Logo -->
                             <a href="#" class="footer-logo"><img src="img/core-img/logo.png" alt=""></a>
-                            <p>Having a realistic career plan in place is often an essential part of career growth, and our personal growth and
+                            <p >Having a realistic career plan in place is often an essential part of career growth, and our personal growth and
                                 development.</p>
 
                             <!-- Social Info -->
@@ -668,7 +665,8 @@ participate individually. Winners will be awarded prizes and certificates.
 
                             <!-- Contact Area -->
                             <div class="footer-contact-info">
-                                <p><i class="zmdi zmdi-phone"></i> 0731 - 4259656</p>
+                                <p><i class="zmdi zmdi-phone"></i> 78983-92101</p>
+                                <p><i class="zmdi zmdi-phone"></i> 96237-08249</p>
                                 <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
                                 <p><i class="zmdi zmdi-globe"></i>incubation.medicaps.ac.in</p>
                                 
