--- a/index.html
+++ b/index.html
@@ -394,22 +394,7 @@
                         <!-- client Slider -->
                         <div class="client-area owl-carousel">
                             <!-- Single client Slider -->
-                            <div class="single-client-content grow">
-                                <!-- Single client Text -->
-                                <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">KNOW ABOUT MIIC</h2>
-                                    <p class="text-justify">Medi-Caps Innovation and Incubation Centre (MIIC) by Medi-Caps University is a platform for
-                                        nurturing and overseeing innovation and entrepreneurship. We nurture and mentor aspiring
-                                        entrepreneur and transform their innovative ideas into viable entrepreneurial initiatives through
-                                        excellence and service. No idea is ever too small, and no problem is ever too big for us. MIIC
-                                        provides opportunity for budding entrepreneur to take their startups to next level. Young minds transforms
-                                        their innovative ideas into viable business propositions.</p>
-                                </div>
-                                <!-- Single client Icon -->
-                                <div class="client-icon">
-                                    <i class="zmdi zmdi-quote"></i>
-                                </div>
-                            </div>
+                           
 
                             <!-- Single client Slider -->
                             <div class="single-client-content grow">
@@ -423,6 +408,22 @@
                                         sound, practically oriented, value driven and well groomed technocrats and professionals. The
                                         highly motivated youngsters on the campus are a constant source of pride. </p>
                                     <!-- Single client Thumb and info -->
+                                </div>
+                                <!-- Single client Icon -->
+                                <div class="client-icon">
+                                    <i class="zmdi zmdi-quote"></i>
+                                </div>
+                            </div>
+                            <div class="single-client-content grow">
+                                <!-- Single client Text -->
+                                <div class="single-client-text">
+                                    <h2 style="color: white; text-align: center;">KNOW ABOUT MIIC</h2>
+                                    <p class="text-justify">Medi-Caps Innovation and Incubation Centre (MIIC) by Medi-Caps University is a platform for
+                                        nurturing and overseeing innovation and entrepreneurship. We nurture and mentor aspiring
+                                        entrepreneur and transform their innovative ideas into viable entrepreneurial initiatives through
+                                        excellence and service. No idea is ever too small, and no problem is ever too big for us. MIIC
+                                        provides opportunity for budding entrepreneur to take their startups to next level. Young minds transforms
+                                        their innovative ideas into viable business propositions.</p>
                                 </div>
                                 <!-- Single client Icon -->
                                 <div class="client-icon">
@@ -556,7 +557,7 @@ conclusion of the event.</p>
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. When to Start with CSS?
+                            <a class="blog-title" href="#">Q. When to Start with CSS With Pen?
                             </a>
                             <p style="text-align: justify;"><b>Ans.</b> On September 19<sup>th</sup>, 2020 at 1:00 PM, a 12-hour online competition (Start with CSS) based
 on the basics of CSS and HTML will commence on Codepen.io and Slack in which you can
@@ -569,7 +570,7 @@ participate individually. Winners will be awarded prizes and certificates.
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What is the evaluation criterion for Start with CSS?
+                            <a class="blog-title" href="#">Q. What is the evaluation criterion for Start with CSS With Pen?
                             </a>
                             <p style="text-align: justify;"><b>Ans.</b> The evaluation will be based on:-<br>
 1. Theme Utilization<br>
@@ -585,7 +586,7 @@ participate individually. Winners will be awarded prizes and certificates.
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What are the themes for Start with CSS?</a>
+                            <a class="blog-title" href="#">Q. What are the themes for Start with CSS With Pen?</a>
                             <p style="text-align: justify;"><b>Ans.</b> Themes for the CSS event:<br>
 1. Ecosystem<br>
 2. Space<br>
@@ -608,7 +609,7 @@ participate individually. Winners will be awarded prizes and certificates.
                 <div class="col-12 col-md-6 col-lg-4 grow">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
-                            <a class="blog-title" href="#">Q. What is the evaluation criteria for participating in Start with CSS?</a>
+                            <a class="blog-title" href="#">Q. What is the evaluation criteria for participating in Start with CSS With Pen?</a>
                             <p style="text-align: justify;"><b>Ans.</b> Registration is required to participate in the event.
                                 </p>
                         </div>
