--- a/index.html
+++ b/index.html
@@ -443,15 +443,12 @@
                                     <i class="zmdi zmdi-quote"></i>
                                 </div>
                             </div>
-
-
-                            <!-- Single client Slider -->
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
-                                <div class="single-client-text;">
+                                <div class="single-client-text">
                                     <h2 style="color: white; text-align: center;">Why We Are Organising</h2>
-                                    <p class="text-justify"  style="color: white;">Business incubators and accelerators nurture the talent and ventures that form the backbone of the
-                                        knowledge-driven economies of the 21<sup>st</sup> century. Based on this understanding, the MIIC 2020 provides
+                                    <p class="text-justify">Business incubators and accelerators nurture the talent and ventures that form the backbone of the
+                                        knowledge-driven economies of the 21<sup>st</sup> century. Based on this understanding, the MIIC provides
                                         incubator and accelerator managers, corporate innovation officers, and policymakers a platform to
                                         connect and learn about the best ways to nurture innovation in their respective ecosystems. It will
                                         provide corporate innovation managers to build network in the growing tech community and
@@ -496,7 +493,7 @@ activities of AARAMBH-2020.
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-text text-center">
                             <a class="blog-title" href="#">Q. What is the procedure of Code Tussle?</a>
-                            <p style="text-align: justify;"><b>Ans.</b> Procedure for hackaton: <br>
+                            <p style="text-align: justify;"><b>Ans.</b> Procedure for hackathon: <br>
 1. Make a team according to the above-said team size and decide your leader.<br>
 2. Register yourself in Code Tussle.<br>
 3. Make your product (Android app, Website)<br>
@@ -666,8 +663,7 @@ participate individually. Winners will be awarded prizes and certificates.
 
                             <!-- Contact Area -->
                             <div class="footer-contact-info">
-                                <p><i class="zmdi zmdi-phone"></i> 78983-92101</p>
-                                <p><i class="zmdi zmdi-phone"></i> 96237-08249</p>
+                                <p><i class="zmdi zmdi-phone"></i> 78983-92101 / 96237-08249</p>
                                 <p><i class="zmdi zmdi-email"></i>muincubationcell@medicaps.ac.in</p>
                                 <p><i class="zmdi zmdi-globe"></i>incubation.medicaps.ac.in</p>
                                 
