--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">Know about e-Cell</h2>
+                                    <h2 style="color: white; text-align: center;">Know ABOUT e-Cell</h2>
                                     <p class="text-justify">The e-Cell Medi-Caps University is a student body formed in 2016 with the motive to <span style="font-size: 20px;">Ideate.Innovate.Initiate.</span> A team of mentors and  e-Cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
                                         At Medi-Caps University, while academic excellence is meant to be uncompromising, we believe that the significance of entrepreneurial skill is indelible to an integrated experience in our university. Aspiring to stride towards a holistic development.</p>
                                     <!-- Single client Thumb and info -->
