--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="about-content-text mb-80">
                         <h6 class="wow fadeInUp" data-wow-delay="300ms">About AARAMBH</h6>
                         <h3 class="wow fadeInUp" data-wow-delay="300ms">Journey Towards Innovation</h3>
-                        <p class="wow fadeInUp" data-wow-delay="300ms" style="text-align: justify;">MIIC & e-Cell is organizing AARAMBH 2020, a three days fest. It provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. <b>#AARAMBH2020</b>  attendees will engage themselves in speaker sessions, CSS with Pen Competition, and 36hrs Hackathon.
+                        <p class="wow fadeInUp" data-wow-delay="300ms" style="text-align: justify;">MIIC & e-Cell is organizing AARAMBH 2020, a three days fest. It provides college students a platform to connect and learn about the best ways to nurture their careers in their respective ecosystems. <b>#AARAMBH2020</b>  attendees will engage themselves in speaker session, CSS with Pen Competition, and 36hrs Hackathon.
                             </p>
                         <a href="#ticket" class="btn confer-btn mt-50 wow fadeInUp" data-wow-delay="300ms">Interested <i class="zmdi zmdi-long-arrow-right"></i></a>
                     </div>
@@ -433,7 +433,7 @@
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">Know ABOUT e-Cell</h2>
+                                    <h2 style="color: white; text-align: center;">KNOW ABOUT e-Cell</h2>
                                     <p class="text-justify">The e-Cell Medi-Caps University is a student body formed in 2016 with the motive to <span style="font-size: 20px;">Ideate.Innovate.Initiate.</span> A team of mentors and  e-Cell students strives towards creating an entrepreneurial ecosystem to provide the platform for individuals with creative minds and ideas with potential for substantial business opportunities
                                         At Medi-Caps University, while academic excellence is meant to be uncompromising, we believe that the significance of entrepreneurial skill is indelible to an integrated experience in our university. Aspiring to stride towards a holistic development.</p>
                                     <!-- Single client Thumb and info -->
@@ -446,7 +446,7 @@
                             <div class="single-client-content grow">
                                 <!-- Single client Text -->
                                 <div class="single-client-text">
-                                    <h2 style="color: white; text-align: center;">Why We Are Organising</h2>
+                                    <h2 style="color: white; text-align: center;">WHY WE ARE ORGANIZING</h2>
                                     <p class="text-justify">Business incubators and accelerators nurture the talent and ventures that form the backbone of the
                                         knowledge-driven economies of the 21<sup>st</sup> century. Based on this understanding, the MIIC provides
                                         incubator and accelerator managers, corporate innovation officers, and policymakers a platform to
